@@ -228,7 +228,7 @@ def stripentities(text, keepxmlentities=False):
                     return ref
     return _STRIPENTITIES_RE.sub(_replace_entity, text)
 
-_STRIPTAGS_RE = re.compile(r'<[^>]*?>')
+_STRIPTAGS_RE = re.compile(r'(<!--.*?-->|<[^>]*>)')
 def striptags(text):
     """Return a copy of the text with any XML/HTML tags removed.
     
@@ -238,6 +238,11 @@ def striptags(text):
     'Foo'
     >>> striptags('Foo<br />')
     'Foo'
+    
+    HTML/XML comments are stripped, too:
+    
+    >>> striptags('<!-- <blub>hehe</blah> -->test')
+    'test'
     
     :param text: the string to remove tags from
     :return: the text with tags removed
